After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782771 - gstamcvideodec: Memory leak on video decoder format set
gstamcvideodec: Memory leak on video decoder format set
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.8.0
Other other
: Normal minor
: 1.12.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-18 09:21 UTC by Andrejs Vasiljevs
Modified: 2017-05-29 07:59 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andrejs Vasiljevs 2017-05-18 09:21:55 UTC
In function gst_amc_video_dec_set_format() downstream caps received from gst_pad_peer_query_caps() are not released.

GstCaps *downstream_caps = gst_pad_peer_query_caps (src_pad, templ_caps);
Comment 1 Sebastian Dröge (slomo) 2017-05-18 09:32:15 UTC
Do you want to provide a patch for this?
Comment 2 Andrejs Vasiljevs 2017-05-18 11:31:19 UTC
I want, but can't build Android for my test platform (armv7) to test it.
cerbero bootstrap fails with error:
http://gstreamer.freedesktop.org/data/cerbero/toolchain/windows/mingw-w64-gcc-4.7.3-windows-armv7.tar.xz
HTTP request sent, awaiting response... 404 Not Found

Is there any instruction or guide how to build Gstreamer for Android for armv7?
Comment 3 Sebastian Dröge (slomo) 2017-05-18 11:32:58 UTC
Building for Android from Windows is currently not supported
Comment 4 Sebastian Dröge (slomo) 2017-05-18 11:35:11 UTC
I'll backport this to 1.12 before 1.12.1 release.

commit 732012a78e75eb5df0f64af274c99a0e9c7b7734
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu May 18 14:34:04 2017 +0300

    amcvideodec: Unref downstream caps after usage
    
    https://bugzilla.gnome.org/show_bug.cgi?id=782771